samples/_failures_safe/1761250671_4a2771_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4aef7d2a.c: In function ‘main’:
./samples/SAFE/__tmp_4aef7d2a.c:133:11: error: expected ‘;’ at end of input
  133 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_4aef7d2a.c:133:5: error: expected declaration or statement at end of input
  133 |     printf
      |     ^~~~~~
